feat: use vue components are shaperone property/object renderers
This will give us more control over the styling of our forms.

One downside I still couldn't figure out is that there are a lot of
superfluous HTML tags in the DOM, which makes styling way harder than it
should be. But at least we can have a consistent look and change the
rendering as needed.

--- a/ui/src/bulma.scss
+++ b/ui/src/bulma.scss
@@ -25,7 +25,12 @@ $panel-radius: 0;
     border-top: 1px solid $grey-lighter;
 }
 
-cc-form {
-    margin: 0 -16px;
+form-property {
     display: block;
+    margin-bottom: 0.75rem;
+}
+
+form-object {
+    display: block;
+    margin-bottom: 0.25rem;
 }
