--- a/ui/src/bulma.scss
+++ b/ui/src/bulma.scss
@@ -25,6 +25,11 @@ $panel-radius: 0;
     border-top: 1px solid $grey-lighter;
 }
 
+.panel-block > .level-left,
+.panel-block > .level-right {
+    flex-grow: 1;
+}
+
 form-property {
     display: block;
     margin-bottom: 0.75rem;
