chore(ui): make help text slightly larger

--- a/ui/src/styles/bulma.scss
+++ b/ui/src/styles/bulma.scss
@@ -3,6 +3,9 @@
 
 $body-size: 14px;
 
+$size-7: 0.8rem;
+$size-small: $size-7;
+
 $panel-shadow: none;
 $panel-heading-size: 1rem;
 $panel-radius: 0;
