feat(ui): preview table CSVW

--- a/ui/src/styles/app.scss
+++ b/ui/src/styles/app.scss
@@ -13,3 +13,7 @@ form-object {
     display: block;
     margin-bottom: 0.25rem;
 }
+
+.quickview.is-active {
+    box-shadow: 5px 0 13px 3px rgba(0,0,0,.2);
+}
