chore(ui): replace vue-multiselect with vue-select
The component is a bit simpler and less buggy for our use-case.

--- a/ui/src/styles/app.scss
+++ b/ui/src/styles/app.scss
@@ -1,6 +1,6 @@
 @import './bulma';
 @import './utilities';
-@import './multiselect';
+@import './vue-select';
 
 .container-narrow {
     max-width: 60rem;
