fix(ui): truncate project title to reasonable size

--- a/ui/src/styles/utilities.scss
+++ b/ui/src/styles/utilities.scss
@@ -34,3 +34,9 @@
 .border-yellow {
     border-color: $yellow;
 }
+
+.truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
