feat: handle large files when replacing CSV file

--- a/ui/src/styles/utilities.scss
+++ b/ui/src/styles/utilities.scss
@@ -40,3 +40,11 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.list-disc {
+    list-style-type: disc;
+}
+
+.list-inside {
+    list-style-position: inside;
+}
