--- a/ui/src/styles/utilities.scss
+++ b/ui/src/styles/utilities.scss
@@ -3,29 +3,30 @@
     height: 100%;
 }
 
-.gap-1 > *:not(:last-child) {
-    @extend .mr-1;
+.gap-1 {
+    gap: 0.25rem;
 }
 
-.gap-2 > *:not(:last-child) {
-    @extend .mr-2;
+.gap-2 {
+    gap: 0.5rem;
 }
 
-.gap-3 > *:not(:last-child) {
-    @extend .mr-3;
+.gap-3 {
+    gap: 0.75rem;
 }
 
-.gap-4 > *:not(:last-child) {
-    @extend .mr-4;
+.gap-4 {
+    gap: 1rem;
 }
 
-.gap-5 > *:not(:last-child) {
-    @extend .mr-5;
+.gap-5 {
+    gap: 1.25rem;
 }
 
-.gap-6 > *:not(:last-child) {
-    @extend .mr-6;
+.gap-6 {
+    gap: 1.5rem;
 }
+
 
 .border-bottom-1 {
     border-bottom: 1px solid gray;
