chore: setup Oruga

--- a/ui/src/styles/bulma.scss
+++ b/ui/src/styles/bulma.scss
@@ -41,3 +41,5 @@ $panel-radius: 0;
     border-color: $tabs-toggle-link-active-border-color;
     color: $tabs-toggle-link-active-color;
 }
+
+@import '~@oruga-ui/theme-bulma/dist/scss/bulma';
