--- a/ui/src/styles/utilities.scss
+++ b/ui/src/styles/utilities.scss
@@ -57,3 +57,13 @@
 .w-20 {
     width: 5rem;
 }
+
+@keyframes spin {
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+.animate-spin {
+    animation: spin 1s linear infinite;
+}
