chore: fix native file input being shown

--- a/ui/src/styles/bulma.scss
+++ b/ui/src/styles/bulma.scss
@@ -45,3 +45,9 @@ $panel-radius: 0;
     border-color: $tabs-toggle-link-active-border-color;
     color: $tabs-toggle-link-active-color;
 }
+
+// Fix an issue in Oruga where the input doesn't have the proper `file-input`
+// class and there is no way to inject it in the configuration.
+.file > .file-label > input[type=file] {
+    @extend .file-input;
+}
