fix: clearing values in dropdowns

--- a/ui/src/styles/app.scss
+++ b/ui/src/styles/app.scss
@@ -9,12 +9,7 @@
 form-property {
     display: block;
     margin-bottom: 0.75rem;
-    flex-grow: var(--cc-form-property-flex-grow);
-}
-
-form-object {
-    display: block;
-    margin-bottom: 0.25rem;
+    flex: var(--cc-form-property-flex);
 }
 
 .quickview.is-active {
